--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,24 @@
   background-blend-mode: color;
 }
 
+.mi-banner-login {
+  background-image: url(https://i.ibb.co/Ns4g4XD/a4dceec21e.jpg);
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(31 29 46 / 20%);
+  background-blend-mode: color;
+}
+.mi-banner-reg {
+  background-image: url(https://i.ibb.co/MZv8sJn/unnamed.png);
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(31 29 46 / 20%);
+  background-blend-mode: color;
+}
+
+
 .icons {
   background-color: rgba(253, 253, 253, 0.466);
   background-blend-mode: color;
@@ -57,10 +75,13 @@
   margin: 0 auto;
 }
 .text-mi{
-  color:#FF6A1C !important;
+  color:#ff6b1c !important;
 }
 .bg-mi{
-  background-color:#FF6A1C !important;
+  background-color:#ff6b1c !important;
+}
+.bg-mi-light{
+  background-color:#ff6b1c96 !important;
 }
 .border-mi{
   border-color: #ff6a1c !important;
